Fix z-index

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -505,7 +505,7 @@ main {
   padding: 0 8rem;
   width: 100%;
   height: 20px;
-  z-index: 999;
+  z-index: 80;
 }
 .credit a {
   text-decoration: underline;
